@@ -35,6 +35,8 @@ This file lists the incompatible changes between Version 2.x and older versions
   - Rg_to_RgV renamed to Rg_to_RgC, RgX_to_RgV renamed to RgX_to_RgC
   - powruvec was replaced by powersr
   - renamed ZV_gcdext -> ZV_extgcd for consistency with other 'gcdext' methods
+  - [libpari] comment out function names obsoleted during the 2.3.* cycle
+    See PARI_OLD_NAMES.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%% VERSION 2.6 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
   - eval() no longer evaluates its arguments in "permissive" mode: eval("1a")
